--- a/lib/css/style.scss
+++ b/lib/css/style.scss
@@ -21,9 +21,7 @@ video {
     max-width: 100%;
 }
 
-// ::-webkit-scrollbar {
-//     width: 7px;
-// }
+// 9
 // ::-webkit-scrollbar-track {
 //     background: #f1f1f1;
 // }
